--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
+    "ethers": "^5.7.0",
+    "i18next": "^21.9.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.2.0"
+    "react-i18next": "^11.18.4",
+    "react-loading-skeleton": "^3.1.0",
+    "react-router-dom": "5.0.0",
+    "react-scripts": "3.2.0",
+    "styled-components": "^5.3.5",
+    "web3": "^1.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
